--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
-<h1>
-  {{title}}
-</h1>
+
+
+  <label for="buyer"> Buyer</label>
+    <input  ng2-auto-complete 
+      [(ngModel)]="buyer" 
+      [source]="observableBuyerListSource.bind(this)" 
+      min-chars=3  
+      loading-text="Loading..." 
+      accept-user-input="false" 
+      no-match-found-text=""
+        id="buyer"><br>
+     
